# mcp_graylog

./: .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  env.example  example_setup.sh  install_deps.sh  pyproject.toml  requirements.txt  run_server.py  start.sh  test_cursor_integration.py  test_entrypoint.sh  test_fixes.py  test_pydantic_fix.py
.cursor/rules/: black-formatter.mdc  no-emoji.mdc
examples/: basic_usage.py
mcp_graylog/: __init__.py  client.py  config.py  server.py  utils.py
tests/: __init__.py  test_client.py  test_utils.py
